fix: layout of btn on mobile2

--- a/css/mobile2.css
+++ b/css/mobile2.css
@@ -213,7 +213,7 @@ body {
   margin: 10px auto;
   padding: 1em 2em;
   /* width: 150px; */
-  width: 100px;
+  width: 150px;
   color: #333;
   font-size: 20px;
   font-weight: 700;
